--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
   .note{ margin-top:12px;color:var(--muted);font-size:13px; text-align:center; }
   .presenciaAlert{ font-weight:700; text-align:center; padding:8px 6px; margin-top:8px; border-radius:8px; background: rgba(255,0,0,0.04); color: #ff8a8a; min-height:44px; display:flex; flex-direction:column; justify-content:center; }
   .presenciaAlert b{ color:var(--danger); }
-  .export-btn{margin-top:12px;padding:8px 10px;background:var(--accent);color:#fff;border:none;border-radius:6px;cursor:pointer;font-size:13px;}
 </style>
 </head>
 <body>
@@ -45,6 +44,7 @@
     </div>
     <div class="controls">
       <button id="modeToggle" class="mode-btn">Modo claro / oscuro</button>
+      <button id="exportCSV" class="mode-btn">Exportar CSV</button>
     </div>
   </div>
 
@@ -56,7 +56,6 @@
   </div>
 
   <div class="grid" id="grid"></div>
-  <button id="exportCSV" class="export-btn">Exportar historial CSV</button>
   <div class="note">Umbral alerta distancia: <b> > 40 mm </b> (4 cm → objeto caído)</div>
 </div>
 
@@ -66,23 +65,20 @@
 
 <script>
 const NUM=5, DIST_THRESHOLD_MM=40;
+const MAX_TEMP=50, MAX_HUM=100; // rangos reales
 const chartsT=[], chartsH=[], active=[true,false,false,false,false], lastValues=Array(NUM).fill(null), badCount=Array(NUM).fill(0);
-const historial=[];
+const history=[];
 
-function tempColor(v){ return `rgba(${v<=25?46: v<=30?241:231},${v<=25?204: v<=30?196: 77},${v<=25?113: v<=30?15:60},0.8)`; }
+function tempColor(v){ return v<=25?'rgba(46,204,113,0.6)':(v<=30?'rgba(241,196,15,0.6)':'rgba(231,76,60,0.6)'); }
 function humColor(){ return 'rgba(0,200,255,0.6)'; }
 function formatDateShort(d){ return `${String(d.getDate()).padStart(2,'0')}/${String(d.getMonth()+1).padStart(2,'0')} ${String(d.getHours()).padStart(2,'0')}:${String(d.getMinutes()).padStart(2,'0')}`; }
 
 function createCard(i){
   const grid=document.getElementById('grid');
-  const card=document.createElement('div'); card.className='card'; card.id=`card-${i+1}`;
-  card.classList.toggle('inactive',!active[i]);
-  card.innerHTML=`
-    <div class="sonda-title">Sonda ${i+1}</div>
-    <div class="tog">
-      <label><input type="checkbox" id="toggle-${i+1}" ${active[i]?'checked':''}> Activar</label>
-      <div style="flex:1"></div>
-      <div style="font-size:12px;color:var(--muted)">Dist: <span id="dist-${i+1}">--</span> mm</div>
+  const card=document.createElement('div'); card.className='card'+(active[i]?'':' inactive'); card.id=`card-${i+1}`;
+  card.innerHTML=`<div class="sonda-title">Sonda ${i+1}</div>
+    <div class="tog"><label><input type="checkbox" id="toggle-${i+1}" ${active[i]?'checked':''}> Activar</label>
+      <div style="flex:1"></div><div style="font-size:12px;color:var(--muted)">Dist: <span id="dist-${i+1}">--</span> mm</div>
     </div>
     <div class="charts">
       <canvas id="t-${i+1}"></canvas>
@@ -91,21 +87,22 @@ function createCard(i){
     <div class="labels">
       <div class="lbl"><div class="muted">Temperatura</div><div class="val" id="tempVal-${i+1}">-- °C</div></div>
       <div class="lbl"><div class="muted">Humedad</div><div class="val" id="humVal-${i+1}">-- %</div></div>
-    </div>
-  `;
+    </div>`;
   grid.appendChild(card);
 
   const presencia=document.createElement("div"); presencia.className="presenciaAlert"; presencia.id=`pres-${i+1}`; card.appendChild(presencia);
 
   const toggle=card.querySelector(`#toggle-${i+1}`);
-  toggle.addEventListener('change',(ev)=>{
-    active[i]=ev.target.checked; card.classList.toggle('inactive',!active[i]); updateSummary();
+  toggle.addEventListener('change',(ev)=>{ 
+    active[i]=ev.target.checked; 
+    card.classList.toggle('inactive',!active[i]); 
+    updateSummary(); 
   });
 
   const ctxT=card.querySelector(`#t-${i+1}`).getContext('2d');
   const ctxH=card.querySelector(`#h-${i+1}`).getContext('2d');
-  chartsT[i]=new Chart(ctxT,{type:'doughnut',data:{datasets:[{data:[0,50],backgroundColor:[tempColor(0),'#2b3944'],borderWidth:0}]},options:{rotation:-90,circumference:180,cutout:'72%',plugins:{legend:{display:false},tooltip:{enabled:false}}}});
-  chartsH[i]=new Chart(ctxH,{type:'doughnut',data:{datasets:[{data:[0,100],backgroundColor:[humColor(),'#2b3944'],borderWidth:0}]},options:{rotation:-90,circumference:180,cutout:'72%',plugins:{legend:{display:false},tooltip:{enabled:false}}}});
+  chartsT[i]=new Chart(ctxT,{type:'doughnut',data:{datasets:[{data:[0,MAX_TEMP],backgroundColor:[tempColor(0),'#2b3944'],borderWidth:0}]} ,options:{rotation:-90,circumference:180,cutout:'72%',plugins:{legend:{display:false},tooltip:{enabled:false}}}});
+  chartsH[i]=new Chart(ctxH,{type:'doughnut',data:{datasets:[{data:[0,MAX_HUM],backgroundColor:[humColor(),'#2b3944'],borderWidth:0}]} ,options:{rotation:-90,circumference:180,cutout:'72%',plugins:{legend:{display:false},tooltip:{enabled:false}}}});
 }
 
 function applyDistanceAlert(i, dist){
@@ -121,18 +118,19 @@ function activarPresencia(i, dist){
 
 function quitarPresencia(i){ const card=document.getElementById(`card-${i+1}`); if(!card) return; card.style.border=''; const box=document.getElementById(`pres-${i+1}`); if(box) box.innerHTML=''; }
 
-function updateSummary(){
-  let act=0,alerts=0,sumT=0,sumH=0,count=0;
-  for(let i=0;i<NUM;i++){
-    if(!active[i]) continue;
-    act++; const v=lastValues[i]; if(!v) continue;
-    sumT+=v.t; sumH+=v.h; count++;
-    if(v.dist>DIST_THRESHOLD_MM) alerts++;
-  }
-  document.getElementById('numActivas').textContent=act;
-  document.getElementById('numAlertas').textContent=alerts;
-  document.getElementById('promTemp').textContent=(count?Math.round(sumT/count):'--')+' °C';
-  document.getElementById('promHum').textContent=(count?Math.round(sumH/count):'--')+' %';
+function updateSummary(){ 
+  let act=0,alerts=0,sumT=0,sumH=0,count=0; 
+  for(let i=0;i<NUM;i++){ 
+    if(!active[i]) continue; act++; 
+    const v=lastValues[i]; 
+    if(!v) continue; 
+    sumT+=v.t; sumH+=v.h; count++; 
+    if(v.dist>DIST_THRESHOLD_MM) alerts++; 
+  } 
+  document.getElementById('numActivas').textContent=act; 
+  document.getElementById('numAlertas').textContent=alerts; 
+  document.getElementById('promTemp').textContent=(count?Math.round(sumT/count):'--')+' °C'; 
+  document.getElementById('promHum').textContent=(count?Math.round(sumH/count):'--')+' %'; 
 }
 
 /* --- Inicializa cards --- */
@@ -148,44 +146,46 @@ console.log("Iniciando prueba de conexión a Firebase...");
 db.ref("prueba").on("value", snap => {
   const data = snap.val();
   console.log("Datos desde Firebase:", data);
-  const s=data ?? {};
-  const t=Number(s.Temperatura_C ?? s.temperatura ?? 0);
-  const h=Number(s.Humedad_pct ?? s.humedad ?? 0);
-  const d=Number(s.Distancia_mm ?? s.distancia_mm ?? s.distancia ?? 0);
+  for(let i=0;i<NUM;i++){
+    if(!active[i]) continue;
+    const s=data ?? {};
+    const t=Number(s.Temperatura_C ?? 0);
+    const h=Number(s.Humedad_pct ?? 0);
+    const d=Number(s.Distancia_mm ?? 0);
+    lastValues[i]={t,h,dist:d};
+    history.push({fecha:new Date(), sonda:i+1, t,h,d}); // historial
 
-  // Solo Sonda 1
-  if(active[0]){
-    lastValues[0]={t,h,dist:d};
-    document.getElementById('tempVal-1').textContent=`${t} °C`;
-    document.getElementById('humVal-1').textContent=`${h} %`;
-    document.getElementById('dist-1').textContent=`${d}`;
-    chartsT[0].data.datasets[0].data[0]=t;
-    chartsT[0].data.datasets[0].backgroundColor[0]=tempColor(t);
-    chartsT[0].update();
-    chartsH[0].data.datasets[0].data[0]=h;
-    chartsH[0].data.datasets[0].backgroundColor[0]=humColor();
-    chartsH[0].update();
-    applyDistanceAlert(0,d);
+    document.getElementById(`tempVal-${i+1}`).textContent=`${t} °C`;
+    document.getElementById(`humVal-${i+1}`).textContent=`${h} %`;
+    document.getElementById(`dist-${i+1}`).textContent=`${d}`;
 
-    // Guardar en historial
-    historial.push({fecha:new Date(),t,h,d});
+    if(chartsT[i]){ 
+      chartsT[i].data.datasets[0].data=[t, MAX_TEMP-t]; 
+      chartsT[i].data.datasets[0].backgroundColor=[tempColor(t),'#2b3944']; 
+      chartsT[i].update(); 
+    }
+    if(chartsH[i]){ 
+      chartsH[i].data.datasets[0].data=[h, MAX_HUM-h]; 
+      chartsH[i].data.datasets[0].backgroundColor=[humColor(),'#2b3944']; 
+      chartsH[i].update(); 
+    }
+    applyDistanceAlert(i,d);
   }
   updateSummary();
 });
 
-/* --- Exportar CSV --- */
-document.getElementById('exportCSV').addEventListener('click',()=>{
-  if(historial.length===0) return alert("No hay datos aún");
-  let csv='Fecha;Temperatura;Humedad;Distancia\n';
-  historial.forEach(row=>{
-    csv+=`${formatDateShort(row.fecha)};${row.t};${row.h};${row.d}\n`;
-  });
-  const blob=new Blob([csv],{type:'text/csv'});
-  const a=document.createElement('a'); a.href=URL.createObjectURL(blob); a.download='historial_sondas.csv'; a.click();
-});
-
 /* --- Modo claro/oscuro --- */
 document.getElementById('modeToggle').addEventListener('click',()=>document.body.classList.toggle('light'));
+
+/* --- Exportar historial CSV --- */
+document.getElementById('exportCSV').addEventListener('click',()=>{
+  let csv='fecha,sonda,temperatura,humedad,distancia\n';
+  history.forEach(r=>{ csv+=`${formatDateShort(r.fecha)},${r.sonda},${r.t},${r.h},${r.d}\n`; });
+  const blob=new Blob([csv],{type:'text/csv'});
+  const url=URL.createObjectURL(blob);
+  const a=document.createElement('a'); a.href=url; a.download='historial_sondas.csv'; a.click();
+  URL.revokeObjectURL(url);
+});
 </script>
 </body>
 </html>
